# Generated by Django 5.1.7 on 2025-04-29 08:40

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("projects", "0001_initial"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Category",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                ("name", models.CharField(max_length=255, verbose_name="Name")),
                (
                    "description",
                    models.TextField(blank=True, null=True, verbose_name="Description"),
                ),
                (
                    "parent_category",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="subcategories",
                        to="inventory.category",
                        verbose_name="Parent Category",
                    ),
                ),
            ],
            options={
                "verbose_name": "Category",
                "verbose_name_plural": "Categories",
                "ordering": ["name"],
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="Item",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                ("name", models.CharField(max_length=255, verbose_name="Name")),
                (
                    "sku",
                    models.CharField(max_length=100, unique=True, verbose_name="SKU"),
                ),
                (
                    "description",
                    models.TextField(blank=True, null=True, verbose_name="Description"),
                ),
                (
                    "item_type",
                    models.CharField(
                        choices=[
                            ("RAW", "Raw Material"),
                            ("INTERMEDIATE", "Intermediate Product"),
                            ("FINAL", "Final Product"),
                        ],
                        max_length=20,
                        verbose_name="Item Type",
                    ),
                ),
                (
                    "unit_of_measure",
                    models.CharField(max_length=50, verbose_name="Unit of Measure"),
                ),
                (
                    "cost_price",
                    models.DecimalField(
                        decimal_places=2,
                        default=0,
                        max_digits=10,
                        verbose_name="Cost Price",
                    ),
                ),
                (
                    "selling_price",
                    models.DecimalField(
                        decimal_places=2,
                        default=0,
                        max_digits=10,
                        verbose_name="Selling Price",
                    ),
                ),
                (
                    "category",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="items",
                        to="inventory.category",
                        verbose_name="Category",
                    ),
                ),
            ],
            options={
                "verbose_name": "Item",
                "verbose_name_plural": "Items",
                "ordering": ["name"],
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="ProductionProcess",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                (
                    "name",
                    models.CharField(
                        help_text="Process name or batch number",
                        max_length=255,
                        verbose_name="Name",
                    ),
                ),
                (
                    "description",
                    models.TextField(blank=True, null=True, verbose_name="Description"),
                ),
                (
                    "process_start_date",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Process Start Date"
                    ),
                ),
                (
                    "process_end_date",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Process End Date"
                    ),
                ),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("PLANNED", "Planned"),
                            ("IN_PROGRESS", "In Progress"),
                            ("COMPLETED", "Completed"),
                            ("CANCELLED", "Cancelled"),
                        ],
                        default="PLANNED",
                        max_length=20,
                        verbose_name="Status",
                    ),
                ),
                (
                    "target_output_quantity",
                    models.DecimalField(
                        decimal_places=3,
                        max_digits=10,
                        verbose_name="Target Output Quantity",
                    ),
                ),
                (
                    "performed_by",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="performed_processes",
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="Performed By",
                    ),
                ),
                (
                    "project",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="production_processes",
                        to="projects.project",
                        verbose_name="Project",
                    ),
                ),
                (
                    "target_output_item",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="target_production_processes",
                        to="inventory.item",
                        verbose_name="Target Output Item",
                    ),
                ),
            ],
            options={
                "verbose_name": "Production Process",
                "verbose_name_plural": "Production Processes",
                "ordering": ["-created_at"],
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="ProcessItemOutput",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                (
                    "quantity_produced",
                    models.DecimalField(
                        decimal_places=3,
                        max_digits=10,
                        verbose_name="Quantity Produced",
                    ),
                ),
                (
                    "item",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="process_outputs",
                        to="inventory.item",
                        verbose_name="Produced Item",
                    ),
                ),
                (
                    "process",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="outputs",
                        to="inventory.productionprocess",
                        verbose_name="Production Process",
                    ),
                ),
            ],
            options={
                "verbose_name": "Process Item Output",
                "verbose_name_plural": "Process Item Outputs",
                "ordering": ["-created_at"],
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="ProcessItemInput",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                (
                    "quantity_consumed",
                    models.DecimalField(
                        decimal_places=3,
                        max_digits=10,
                        verbose_name="Quantity Consumed",
                    ),
                ),
                (
                    "item",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="process_inputs",
                        to="inventory.item",
                        verbose_name="Consumed Item",
                    ),
                ),
                (
                    "process",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="inputs",
                        to="inventory.productionprocess",
                        verbose_name="Production Process",
                    ),
                ),
            ],
            options={
                "verbose_name": "Process Item Input",
                "verbose_name_plural": "Process Item Inputs",
                "ordering": ["-created_at"],
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="PurchaseOrderLine",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                (
                    "purchase_order_id",
                    models.UUIDField(verbose_name="Purchase Order ID"),
                ),
                (
                    "quantity",
                    models.DecimalField(
                        decimal_places=3, max_digits=10, verbose_name="Quantity"
                    ),
                ),
                (
                    "unit_price",
                    models.DecimalField(
                        decimal_places=2, max_digits=10, verbose_name="Unit Price"
                    ),
                ),
                (
                    "item",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="purchase_order_lines",
                        to="inventory.item",
                        verbose_name="Item",
                    ),
                ),
            ],
            options={
                "verbose_name": "Purchase Order Line",
                "verbose_name_plural": "Purchase Order Lines",
                "ordering": ["-created_at"],
                "abstract": False,
            },
        ),
        migrations.CreateModel(
            name="BillOfMaterials",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                (
                    "quantity_required",
                    models.DecimalField(
                        decimal_places=3,
                        help_text="Amount of input item needed for one unit of output item",
                        max_digits=10,
                        verbose_name="Quantity Required",
                    ),
                ),
                (
                    "unit_of_measure",
                    models.CharField(max_length=50, verbose_name="Unit of Measure"),
                ),
                (
                    "sequence",
                    models.IntegerField(
                        default=10,
                        help_text="Order of assembly/production",
                        verbose_name="Sequence",
                    ),
                ),
                (
                    "input_item",
                    models.ForeignKey(
                        help_text="Component required for production",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="bom_inputs",
                        to="inventory.item",
                        verbose_name="Input Item",
                    ),
                ),
                (
                    "output_item",
                    models.ForeignKey(
                        help_text="The intermediate or final product being produced",
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="bom_outputs",
                        to="inventory.item",
                        verbose_name="Output Item",
                    ),
                ),
            ],
            options={
                "verbose_name": "Bill of Materials",
                "verbose_name_plural": "Bills of Materials",
                "ordering": ["output_item__name", "sequence"],
                "abstract": False,
                "unique_together": {("output_item", "input_item")},
            },
        ),
    ]
