# Generated by Django 5.1.7 on 2025-05-09 11:39

import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("customers", "0001_initial"),
        ("dealers", "0001_initial"),
        ("inventory", "0009_alter_inventorytransaction_quantity_and_more"),
        ("sales", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="RepairRequest",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                (
                    "request_date",
                    models.DateField(auto_now_add=True, verbose_name="Request Date"),
                ),
                (
                    "issue_description",
                    models.TextField(verbose_name="Issue Description"),
                ),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("created", "Created"),
                            ("received", "Received"),
                            ("fee_notified", "Fee Notified"),
                            ("dealer_approved", "Dealer Approved"),
                            ("payment_pending", "Payment Pending"),
                            ("repairing", "Repairing"),
                            ("ready_for_delivery", "Ready For Delivery"),
                            ("delivered_to_dealer", "Delivered To Dealer"),
                        ],
                        default="created",
                        max_length=20,
                        verbose_name="Status",
                    ),
                ),
                (
                    "technician_notes",
                    models.TextField(
                        blank=True, null=True, verbose_name="Technician Notes"
                    ),
                ),
                (
                    "is_warranty",
                    models.BooleanField(default=True, verbose_name="Is Warranty"),
                ),
                (
                    "repair_cost",
                    models.DecimalField(
                        blank=True,
                        decimal_places=2,
                        default=0,
                        max_digits=10,
                        null=True,
                        verbose_name="Repair Cost",
                    ),
                ),
                (
                    "completion_date",
                    models.DateField(
                        blank=True, null=True, verbose_name="Completion Date"
                    ),
                ),
                (
                    "customer",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="repair_requests",
                        to="customers.customer",
                        verbose_name="Customer",
                    ),
                ),
                (
                    "dealer",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="repair_requests",
                        to="dealers.dealer",
                        verbose_name="Dealer",
                    ),
                ),
                (
                    "device",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="repair_requests",
                        to="sales.device",
                        verbose_name="Device",
                    ),
                ),
            ],
            options={
                "verbose_name": "Repair Request",
                "verbose_name_plural": "Repair Requests",
                "db_table": "repair_request",
                "ordering": ["-request_date"],
            },
        ),
        migrations.CreateModel(
            name="RepairPart",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="Created At"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="Updated At"),
                ),
                (
                    "deleted_at",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="Deleted At"
                    ),
                ),
                (
                    "is_active",
                    models.BooleanField(default=True, verbose_name="Is Active"),
                ),
                (
                    "quantity",
                    models.PositiveIntegerField(default=1, verbose_name="Quantity"),
                ),
                (
                    "unit_price",
                    models.DecimalField(
                        decimal_places=2, max_digits=10, verbose_name="Unit Price"
                    ),
                ),
                (
                    "total_price",
                    models.DecimalField(
                        decimal_places=2, max_digits=10, verbose_name="Total Price"
                    ),
                ),
                (
                    "is_warranty_covered",
                    models.BooleanField(
                        default=True, verbose_name="Is Warranty Covered"
                    ),
                ),
                (
                    "item",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name="used_in_repairs",
                        to="inventory.item",
                        verbose_name="Spare Part",
                    ),
                ),
                (
                    "repair_request",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="repair_parts",
                        to="service.repairrequest",
                        verbose_name="Repair Request",
                    ),
                ),
            ],
            options={
                "verbose_name": "Repair Part",
                "verbose_name_plural": "Repair Parts",
                "db_table": "repair_part",
            },
        ),
    ]
